--- a/assets/css/pages/strategy.css
+++ b/assets/css/pages/strategy.css
@@ -2,37 +2,34 @@ html, body {
   background-color: #f8f8f8;
   font-family: Verdana, sans-serif; }
 
-main {
+.strategy {
   max-width: 960px;
   margin: 0 auto; }
-  main div.has-big-hexa {
+  .strategy .title {
+    text-align: center;
+    font-size: 40px;
+    font-weight: bold; }
+  .strategy .subtitle {
+    color: #292929;
+    font-size: 15px;
+    font-weight: bold;
+    border-bottom: 1px solid #5a8fa6;
+    padding-bottom: 5px; }
+  .strategy div.has-big-hexa {
     display: flex;
     flex-direction: row;
-    align-items: center;
     justify-content: space-around; }
-  main .infos {
+  .strategy .infos {
     display: flex;
     align-items: center;
     justify-content: flex-start;
     cursor: pointer;
     margin-left: 10px; }
-    main .infos p {
+    .strategy .infos p {
       font-size: 16.5px;
       margin-left: 10px; }
-      main .infos p span {
+      .strategy .infos p span {
         color: #636363; }
-
-.title {
-  text-align: center;
-  font-size: 40px;
-  font-weight: bold; }
-
-.subtitle {
-  color: #292929;
-  font-size: 15px;
-  font-weight: bold;
-  border-bottom: 1px solid #5a8fa6;
-  padding-bottom: 5px; }
 
 .svg-container {
   display: flex;
@@ -119,27 +116,464 @@ figure figcaption {
   color: #727272;
   line-height: 22px; }
 
+.objectif-1 ul, .objectif-2 ul, .objectif-3 ul, .objectif-4 ul {
+  display: flex;
+  list-style-type: none;
+  justify-content: space-around;
+  position: relative; }
+
+/**************************************************************************\
+                  OBJECTIF 1
+\**************************************************************************/
+.objectif-1 ul {
+  position: relative;
+  margin-top: 75px; }
+
+.objectif-1 ul li {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 55%;
+  border: 1px solid #000;
+  margin: 0 1em;
+  display: inline-block;
+  color: black;
+  position: relative; }
+  .objectif-1 ul li h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 0;
+    font-size: 15px; }
+  .objectif-1 ul li span {
+    color: #000;
+    position: absolute;
+    top: 55px;
+    left: 0;
+    font-size: 15px; }
+
+.objectif-1 li:nth-child(2)::before {
+  content: '';
+  position: absolute;
+  top: 19.8px;
+  left: -150px;
+  width: 173px;
+  height: 1px;
+  color: red;
+  background: #000; }
+
+.objectif-1 li:nth-child(3) {
+  top: -10px;
+  width: 50px;
+  height: 50px; }
+  .objectif-1 li:nth-child(3) h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 5px;
+    font-size: 15px; }
+  .objectif-1 li:nth-child(3) span {
+    color: #000;
+    position: absolute;
+    top: 65px;
+    left: 5px;
+    font-size: 15px; }
+
+.objectif-1 li:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  top: 20px;
+  left: -145px;
+  width: 170px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(7px) translateX(-2px) rotate(-2deg); }
+
+.objectif-1 li:nth-child(4) {
+  top: -20px;
+  width: 60px;
+  height: 60px; }
+  .objectif-1 li:nth-child(4) h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 10px;
+    font-size: 15px; }
+  .objectif-1 li:nth-child(4) span {
+    color: #000;
+    position: absolute;
+    top: 75px;
+    left: 10px;
+    font-size: 15px; }
+
+.objectif-1 li:nth-child(4)::before {
+  content: '';
+  position: absolute;
+  top: 24px;
+  left: -157px;
+  width: 190px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(6.7px) translateX(-1px) rotate(-2deg); }
+
+.objectif-1 li:last-child {
+  top: -40px;
+  width: 80px;
+  height: 80px;
+  background: #5a8fa6; }
+  .objectif-1 li:last-child h1 {
+    color: #000;
+    position: absolute;
+    top: -50px;
+    left: 25px;
+    font-size: 15px; }
+  .objectif-1 li:last-child span {
+    color: #000;
+    position: absolute;
+    top: 95px;
+    left: 25px;
+    font-size: 15px; }
+
+.objectif-1 li:last-child::before {
+  content: '';
+  position: absolute;
+  top: 37px;
+  left: -157px;
+  width: 200px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(6.7px) translateX(-1px) rotate(-2deg); }
+
+/**************************************************************************\
+                  OBJECTIF 2
+\**************************************************************************/
+.objectif-2 ul {
+  position: relative;
+  margin-top: 75px; }
+
+.objectif-2 ul li {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 55%;
+  border: 1px solid #000;
+  margin: 0 1em;
+  display: inline-block;
+  color: black;
+  position: relative; }
+  .objectif-2 ul li h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 0;
+    font-size: 15px; }
+  .objectif-2 ul li span {
+    color: #000;
+    position: absolute;
+    top: 55px;
+    left: 0;
+    font-size: 15px; }
+
+.objectif-2 li:nth-child(2) {
+  width: 55px;
+  height: 55px;
+  top: -15px; }
+
+.objectif-2 li:nth-child(2)::before {
+  content: '';
+  position: absolute;
+  top: 22px;
+  left: -140px;
+  width: 170px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(10px) translateX(-2px) rotate(-2.5deg); }
+
+.objectif-2 li:nth-child(3) {
+  top: -25px;
+  width: 65px;
+  height: 65px; }
+  .objectif-2 li:nth-child(3) h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 5px;
+    font-size: 15px; }
+  .objectif-2 li:nth-child(3) span {
+    color: #000;
+    position: absolute;
+    top: 65px;
+    left: 5px;
+    font-size: 15px; }
+
+.objectif-2 li:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  top: 27px;
+  left: -146px;
+  width: 178px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(7px) translateX(-3px) rotate(-2.7deg); }
+
+.objectif-2 li:nth-child(4) {
+  top: -35px;
+  width: 75px;
+  height: 75px; }
+  .objectif-2 li:nth-child(4) h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 10px;
+    font-size: 15px; }
+  .objectif-2 li:nth-child(4) span {
+    color: #000;
+    position: absolute;
+    top: 75px;
+    left: 10px;
+    font-size: 15px; }
+
+.objectif-2 li:nth-child(4)::before {
+  content: '';
+  position: absolute;
+  top: 29px;
+  left: -157px;
+  width: 196px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(6.7px) translateX(-1px) rotate(-2.5deg); }
+
+.objectif-2 li:last-child {
+  top: -50px;
+  width: 80px;
+  height: 80px;
+  background: #5a8fa6; }
+  .objectif-2 li:last-child h1 {
+    color: #000;
+    position: absolute;
+    top: -50px;
+    left: 25px;
+    font-size: 15px; }
+  .objectif-2 li:last-child span {
+    color: #000;
+    position: absolute;
+    top: 95px;
+    left: 25px;
+    font-size: 15px; }
+
+.objectif-2 li:last-child::before {
+  content: '';
+  position: absolute;
+  top: 35px;
+  left: -157px;
+  width: 200px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(6.7px) translateX(-1px) rotate(-2.7deg); }
+
+/**************************************************************************\
+                  OBJECTIF 3
+\**************************************************************************/
+.objectif-3 ul {
+  position: relative;
+  margin-top: 75px; }
+
+.objectif-3 ul li {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  border-radius: 55%;
+  border: 1px solid #000;
+  margin: 0 1em;
+  display: inline-block;
+  color: black;
+  position: relative; }
+  .objectif-3 ul li h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 0;
+    font-size: 15px; }
+  .objectif-3 ul li span {
+    color: #000;
+    position: absolute;
+    top: 55px;
+    left: 0;
+    font-size: 15px; }
+
+.objectif-3 li:nth-child(2) {
+  width: 35px;
+  height: 35px;
+  top: 10px; }
+
+.objectif-3 li:nth-child(2)::before {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: -145px;
+  width: 165px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(7px) translateX(-2px) rotate(3deg); }
+
+.objectif-3 li:nth-child(3) {
+  top: -25px;
+  width: 65px;
+  height: 65px; }
+  .objectif-3 li:nth-child(3) h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 5px;
+    font-size: 15px; }
+  .objectif-3 li:nth-child(3) span {
+    color: #000;
+    position: absolute;
+    top: 65px;
+    left: 5px;
+    font-size: 15px; }
+
+.objectif-3 li:nth-child(3)::before {
+  content: '';
+  position: absolute;
+  top: 34px;
+  left: -140px;
+  width: 178px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(6.5px) translateX(-3px) rotate(-7deg); }
+
+.objectif-3 li:nth-child(4) {
+  top: -35px;
+  width: 75px;
+  height: 75px; }
+  .objectif-3 li:nth-child(4) h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 10px;
+    font-size: 15px; }
+  .objectif-3 li:nth-child(4) span {
+    color: #000;
+    position: absolute;
+    top: 75px;
+    left: 10px;
+    font-size: 15px; }
+
+.objectif-3 li:nth-child(4)::before {
+  content: '';
+  position: absolute;
+  top: 29px;
+  left: -157px;
+  width: 200px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(6.7px) translateX(-1px) rotate(-2.5deg); }
+
+.objectif-3 li:last-child {
+  top: -50px;
+  width: 80px;
+  height: 80px;
+  background: #5a8fa6; }
+  .objectif-3 li:last-child h1 {
+    color: #000;
+    position: absolute;
+    top: -50px;
+    left: 25px;
+    font-size: 15px; }
+  .objectif-3 li:last-child span {
+    color: #000;
+    position: absolute;
+    top: 95px;
+    left: 25px;
+    font-size: 15px; }
+
+.objectif-3 li:last-child::before {
+  content: '';
+  position: absolute;
+  top: 35px;
+  left: -157px;
+  width: 200px;
+  height: 1px;
+  color: red;
+  background: #000;
+  -webkit-transform: translateY(6.7px) translateX(-1px) rotate(-2.7deg); }
+
+/**************************************************************************\
+                  OBJECTIF 4
+\**************************************************************************/
+.objectif-4 ul {
+  position: relative;
+  margin-top: 55px; }
+
+.objectif-4 ul li {
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  border-radius: 55%;
+  border: 1px solid #000;
+  margin: 0 1em;
+  display: inline-block;
+  color: black;
+  position: relative; }
+  .objectif-4 ul li h1 {
+    color: #000;
+    position: absolute;
+    top: -48px;
+    left: 15px;
+    font-size: 15px; }
+  .objectif-4 ul li span {
+    color: #000;
+    position: absolute;
+    top: 95px;
+    left: 20px;
+    font-size: 15px; }
+
+.objectif-4 ul li::before {
+  content: '';
+  position: absolute;
+  top: 35px;
+  left: -150px;
+  width: 12em;
+  height: 1px;
+  background: #000; }
+
+.objectif-4 ul li:first-child::before {
+  display: none; }
+
+.objectif-4 ul li:last-child {
+  background: #5a8fa6; }
+
 /**************************************************************************\
                   MEDIA QUERIES
 \**************************************************************************/
 @media screen and (max-width: 580px) {
-  .title {
+  .strategy .title {
     font-size: 20px; }
-
-  main div.has-big-hexa {
+  .strategy div.has-big-hexa {
     display: flex;
     flex-direction: column;
     text-align: center; }
-  main .infos {
+  .strategy .infos {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
     flex-wrap: wrap; }
-    main .infos p {
+    .strategy .infos p {
       font-size: 14px;
       text-align: center; }
-      main .infos p span {
+      .strategy .infos p span {
         color: #636363; }
 
   .svg-container-pilliers {
